--- a/site/data/articles/2021-12-30-purity.md
+++ b/site/data/articles/2021-12-30-purity.md
@@ -1,7 +1,10 @@
 ---
-title: 'Purity'
-imageFilename: 'https://images.unsplash.com/photo-1600464920755-ea8ee301fc99?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1039&q=80'
-imageCaption: 'Photo by <a href="https://unsplash.com/@juliakadel?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Julia Kadel</a> on <a href="https://unsplash.com/?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>'
+title: Purity
+imageFilename: https://images.unsplash.com/photo-1600464920755-ea8ee301fc99?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1039&q=80
+imageCaption: >-
+  Photo by <a href="https://unsplash.com/@juliakadel?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Julia Kadel</a> on <a
+  href="https://unsplash.com/?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
+draft: true
 ---
 
 If you want to be happy, you must be pure, for Jesus said, "blessed are the pure of heart, for they shall see God."
