--- a/site/data/articles/2022-01-06-sin.md
+++ b/site/data/articles/2022-01-06-sin.md
@@ -1,7 +1,8 @@
 ---
-title: 'Sin'
-imageFilename: 'https://upload.wikimedia.org/wikipedia/commons/d/de/Balthasar_van_Cortbemde_-_The_Good_Samaritan.jpg'
-imageCaption: 'The Good Samaritan by Balthasar van Cortbemde (1647)'
+title: Sin
+imageFilename: https://upload.wikimedia.org/wikipedia/commons/d/de/Balthasar_van_Cortbemde_-_The_Good_Samaritan.jpg
+imageCaption: The Good Samaritan by Balthasar van Cortbemde (1647)
+draft: true
 ---
 
 Imagine you're lined up in a race, and it's about to start. 3... 2... 1... GO! You all run! But one guy... he takes off his shoe and throws it at his own foot!
