--- a/site/data/articles/2022-01-10-hail-mary.md
+++ b/site/data/articles/2022-01-10-hail-mary.md
@@ -1,7 +1,8 @@
 ---
-title: 'Hail Mary'
-imageFilename: 'https://wedaretosay.com/wp-content/uploads/2019/11/AnnunciationBlog.jpg'
+title: Hail Mary
+imageFilename: https://wedaretosay.com/wp-content/uploads/2019/11/AnnunciationBlog.jpg
 imageCaption: ''
+draft: true
 ---
 
 I explained one perspective of the Our Father yesterday, and I think I have some useful thoughts on the Hail Mary too, that I'd like to share with you. And some more examples of how to meditate on the Rosary which I thought of today.
