--- a/site/data/articles/2022-01-11-glory-be.md
+++ b/site/data/articles/2022-01-11-glory-be.md
@@ -1,7 +1,9 @@
 ---
-title: 'Glory Be'
-imageFilename: 'https://upload.wikimedia.org/wikipedia/commons/thumb/6/6b/Bartolom%C3%A9_Esteban_Murillo_-_The_Baptism_of_Christ_-_Google_Art_Project.jpg/1398px-Bartolom%C3%A9_Esteban_Murillo_-_The_Baptism_of_Christ_-_Google_Art_Project.jpg'
+title: Glory Be
+imageFilename: >-
+  https://upload.wikimedia.org/wikipedia/commons/thumb/6/6b/Bartolom%C3%A9_Esteban_Murillo_-_The_Baptism_of_Christ_-_Google_Art_Project.jpg/1398px-Bartolom%C3%A9_Esteban_Murillo_-_The_Baptism_of_Christ_-_Google_Art_Project.jpg
 imageCaption: ''
+draft: true
 ---
 
 This is actually one of the most underrated prayers, and one of the most helpful and beautiful. I would have you understand it a lot better if you would love God all the more, so I will tell you some things I have learned about it (after resolving to make it not my least favorite prayer anymore).
