--- a/site/data/articles/2025-03-18-dad-jokes.md
+++ b/site/data/articles/2025-03-18-dad-jokes.md
@@ -8,6 +8,8 @@ There is a very good, holy, and wholesome type of humor, and it very literally i
 
 Wordplay is literally playing with an aspect of the divine, which is why it's the fuel behind dad jokes. The modern hatred of dad jokes is absolutely unjustified and unreasonable, and I've always found that hatred confusing and now I see why it's evil: dad jokes are a part of the paternal nature of God the Father. It's literally the father playfully wrestling with the son!
 
+Probably the first ever "dad joke" was when the Son said his words words, "I am the Son," and the Father probably said "Hi the Son, I'm Dad." Get it? Like "I'm hungry; hi hungry I'm dad"? Ha!
+
 That's why the devil has planted deep seeds into society of the hatred of dad jokes, because he wants to convince people to have a much more evil and impure sense of humor, rather than the wholesome sense of humor that comes from the Father.
 
 Dad jokes and similar word play need to come back in style.
